write about lexerbuilder and parserbuilder

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "Towards SPARQL query transpilation through modular parser/ generator"
+title: "Tackling SPARQL heterogeneity though modular parsing"
 ---
 <header markdown="1">
 # <%= @item[:title] %>
