--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -6,13 +6,21 @@ title: "Tackling SPARQL heterogeneity though modular parsing"
 
 {:#authors}
 - <%= person 'Jitse De Smet', 'https://jitsedesmet.be/', 'https://jitsedesmet.be/profile#me' %> <sup><a href='https://orcid.org/0009-0002-6513-5013'>[0009-0002-6513-5013]</a></sup>
-- <%= person 'Ruben Taelman', 'https://www.rubensworks.net/', 'https://www.rubensworks.net/#me' %> <sup><a href='https://orcid.org/0000-0001-5118-256X'>[0000-0001-5118-256X]</a></sup>
 
 {:#affiliations}
 - {:#myaffiliation} IDLab, Department of Electronics and Information Systems, Ghent University – imec.
 
-<%= section '0.abstract' %>
 </header>
+
+<!-- Hack to make our custom fonts load in print-mode -->
+<!-- https://stackoverflow.com/questions/39364259/chrome-print-preview-doesnt-load-media-only-print-font-face -->
+<span class='printfont1'> </span>
+<span class='printfont2'> </span>
+<span class='printfont3'> </span>
+<span class='printfont4'> </span>
+
+<div id="content">
+  <%= section '0.abstract' %>
 
 <main>
   <!-- Add sections by specifying their file name, excluding the '.md' suffix. -->
@@ -20,10 +28,8 @@ title: "Tackling SPARQL heterogeneity though modular parsing"
   <%= section '2.architecture' %>
   <%= section '3.demo' %>
   <%= section '4.conclusion' %>
-
-
-
-
 </main>
 
 <footer></footer>
+
+</div>
