--- a/content/styles/print.scss
+++ b/content/styles/print.scss
@@ -1,4 +1,4 @@
-@import "lncs.scss";
+@import "ceurart.scss";
 @import "shared.scss";
 @import "shared_override.scss";
 
@@ -6,43 +6,4 @@ header {
   .actions, .context {
     display: none;
   }
-}
-
-// Table of contents
-ol.index-entries {
-  margin-bottom: 0;
-}
-
-ol.index-entries[depth="0"] {
-  li {
-    font-weight: bold;
-  }
-}
-
-ol.index-entries[depth="1"] {
-  margin-bottom: 1em;
-  li {
-    font-weight: normal;
-  }
-}
-
-figure.numbered pre {
-  counter-reset: precode;
-
-  code {
-    &::before {
-      color: lightgray;
-      left: -1.75em;
-      text-align: right;
-      display: inline-block;
-      width: 1.5em;
-      content: counter(precode) " ";
-      counter-increment: precode;
-    }
-  }
-}
-
-img {
-  object-fit: contain;
-  max-width: 55%;
 }
