--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -6,6 +6,7 @@ title: "Tackling SPARQL heterogeneity though modular parsing"
 
 {:#authors}
 - <%= person 'Jitse De Smet', 'https://jitsedesmet.be/', 'https://jitsedesmet.be/profile#me' %> <sup><a href='https://orcid.org/0009-0002-6513-5013'>[0009-0002-6513-5013]</a></sup>
+- <%= person 'Ruben Taelman', 'https://www.rubensworks.net/', 'https://www.rubensworks.net/#me' %> <sup><a href='https://orcid.org/0000-0001-5118-256X'>[0000-0001-5118-256X]</a></sup>
 
 {:#affiliations}
 - {:#myaffiliation} IDLab, Department of Electronics and Information Systems, Ghent University – imec.
