process feedback of RT - pre LLM fix

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -1,9 +1,8 @@
 ---
-title: "Tackling SPARQL heterogeneity though modular parsing"
+title: "Towards tackling SPARQL heterogeneity through modular parsing"
 ---
 <header markdown="1">
 # <%= @item[:title] %>
-<span class="comment" data-author="RT">I like the title, but it will prohibit us from using it in a future paper. Maybe we should now already determine a title for the final big resource paper, so that we can determine a safe title that builds up to that with this paper. Something like "Towards tackling SPARQL..." may also work.</span>
 
 {:#authors}
 - <%= person 'Jitse De Smet', 'https://jitsedesmet.be/', 'https://jitsedesmet.be/profile#me' %> <sup><a href='https://orcid.org/0009-0002-6513-5013'>[0009-0002-6513-5013]</a></sup>
