--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -26,9 +26,10 @@ title: "Towards tackling SPARQL heterogeneity through modular parsing"
 <main>
   <!-- Add sections by specifying their file name, excluding the '.md' suffix. -->
   <%= section '1.introduction' %>
-  <%= section '2.architecture' %>
-  <%= section '3.demo' %>
-  <%= section '4.conclusion' %>
+  <%= section '2.sota' %>
+  <%= section '3.architecture' %>
+  <%= section '4.demo' %>
+  <%= section '5.conclusion' %>
 </main>
 
 <footer></footer>
