no before on genai decl

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -30,6 +30,7 @@ title: "Towards tackling SPARQL heterogeneity through modular parsing"
   <%= section '3.architecture' %>
   <%= section '4.demo' %>
   <%= section '5.conclusion' %>
+  <%= section '6.decl-on-gen-ai' %>
 </main>
 
 <footer></footer>
