--- a/content/styles/ceurart.scss
+++ b/content/styles/ceurart.scss
@@ -287,7 +287,7 @@ main section:not([id=abstract]):not([id=document-status]):not([id=keywords]):not
 counter-increment:sub-sub-section;
 counter-reset:sub-sub-sub-section;
 }
-main section:not([id=abstract]):not([id=document-status]):not([id=keywords]):not([id=references]):not([id=categories-and-subject-descriptors]):not([id=general-terms]):not([id=appendix]):not([id=contact-us]):not([id^=table-of-]) h2:before {
+main section:not([id=abstract]):not([id=document-status]):not([id=keywords]):not([id=references]):not([id=categories-and-subject-descriptors]):not([id=general-terms]):not([id=appendix]):not([id=contact-us]):not([id^=table-of-]):not([id=declaration-on-generative-ai]) h2:before {
 content:counter(section) "." "\00a0\00a0";
 }
 section h3:before {
